# 9GRadio

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dsd_neo.cpp  dsdcc_jni.cpp  dsp_jni.cpp  fir_filter.cpp  fm_demod.cpp  gnuradio_dsp.cpp  iq_convert.cpp  ninegradio_dsp_jni.cpp  resampler.cpp  usb_bulk_jni.cpp  vocoder_jni.cpp
app/src/main/cpp/dsdcc/: dmr.cpp  dmr.h  dsd_decoder.cpp  dsd_decoder.h  dsd_mbe.cpp  dsd_mbe.h  dsd_mbelib.h  dsd_symbol.cpp  mbefec.h  p25p1.cpp  p25p1.h  p25p1_bch.h  p25p1_hamming.cpp  p25p1_hamming.h  p25p1_reedsolomon.h
app/src/main/cpp/include/: iq_convert.h  vocoder.h  volk_android.h
app/src/main/cpp/mbelib/: mbelib.h
app/src/main/cpp/mbelib-neo/include/mbelib-neo/: mbelib.h  version.h
app/src/main/cpp/mbelib-neo/src/ambe/: ambe3600x2400.c  ambe3600x2450.c  ambe_common.c
app/src/main/cpp/mbelib-neo/src/core/: mbe_adaptive.c  mbe_unvoiced_fft.c  mbelib.c
app/src/main/cpp/mbelib-neo/src/ecc/: ecc.c
app/src/main/cpp/mbelib-neo/src/imbe/: imbe7100x4400.c  imbe7200x4400.c
app/src/main/cpp/mbelib-neo/src/internal/: ambe_common.h  imbe4400_internal.h  mbe_adaptive.h  mbe_bitpack.h  mbe_compiler.h  mbe_math.h  mbe_result.h  mbe_tone.h  mbe_unvoiced_fft.h  mbe_validation.h
app/src/main/java/com/radiosport/ninegradio/: Extensions.kt  RtlSdrApplication.kt
app/src/main/java/com/radiosport/ninegradio/audio/: AudioEngine.kt
app/src/main/java/com/radiosport/ninegradio/data/: AppDatabase.kt  DataExporter.kt
app/src/main/java/com/radiosport/ninegradio/debug/: DebugBus.kt
app/src/main/java/com/radiosport/ninegradio/dsp/: AcarsDecoder.kt  AudioDsp.kt  DemodMode.kt  Demodulators.kt  DigitalFrameFilter.kt  DigitalVoiceDecoder.kt  DsdccNative.kt  DspEngine.kt  ExternalDecoderStream.kt  FftEngine.kt  FrequencyStepManager.kt  GainCalibration.kt  NativeDsp.kt  PocsagDecoder.kt  PolyphaseResampler.kt  ProtocolDecoders.kt  RdsDecoder.kt  RecentCallTracker.kt  SourceDiagnostic.kt
app/src/main/java/com/radiosport/ninegradio/recording/: IqRecorder.kt
app/src/main/java/com/radiosport/ninegradio/scanner/: FrequencyScanner.kt
app/src/main/java/com/radiosport/ninegradio/source/: IqSource.kt  RtlSdrDeviceSource.kt  RtlSdrDriverApp.kt  RtlTcpDiscovery.kt  RtlTcpSource.kt
app/src/main/java/com/radiosport/ninegradio/ui/: AdsbActivity.kt  AprsActivity.kt  ControlsPagerAdapter.kt  ControlsTabManager.kt  DebugPanelActivity.kt  FrequencyView.kt  MainActivity.kt  MainViewModel.kt  MemoryActivity.kt  OtherActivities.kt  RtlSdrTestActivity.kt  SMeterView.kt  ScannerActivity.kt  SpectrumView.kt  TuningDialView.kt  ViewModelFactory.kt  WaterfallView.kt
app/src/main/java/com/radiosport/ninegradio/usb/: RtlSdrDevice.kt  RtlSdrService.kt  RtlSdrUsbHelper.kt  UsbDeviceManager.kt
app/src/main/res/color/: chip_background_color.xml  chip_text_color.xml
app/src/main/res/drawable/: bg_chip_active.xml  bg_search_box.xml  ic_launcher_foreground.xml  ic_radio.xml  ic_record.xml  ic_star_filled.xml  ic_star_outline.xml
app/src/main/res/layout/: activity_acars.xml  activity_adsb.xml  activity_aprs.xml  activity_bookmark.xml  activity_main.xml  activity_memory.xml  activity_recording.xml  activity_rtlsdr_test.xml  activity_scanner.xml  activity_settings.xml  activity_spectrum_fullscreen.xml  dialog_bookmark_edit.xml  dialog_bookmark_list_edit.xml  dialog_memory_channel.xml  fragment_tab_acars.xml  fragment_tab_aprs.xml  fragment_tab_dig.xml  fragment_tab_digital_voice.xml  fragment_tab_display.xml  fragment_tab_dmr.xml  fragment_tab_dstar.xml  fragment_tab_mode.xml  fragment_tab_recording.xml  fragment_tab_rf.xml  fragment_tab_scan.xml  fragment_tab_settings.xml  fragment_tab_tune.xml  fragment_tab_ysf.xml  item_acars_message.xml  item_bookmark.xml  item_memory_channel.xml  item_recent_call.xml  item_recording.xml  item_scan_channel_header.xml  item_scan_channel_row.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_provider_paths.xml  network_security_config.xml  preferences.xml  usb_device_filter.xml
